# rag-example

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run_frontend.py  setup.py
backend/: main.py  session_manager.py
backend/llm/: groq.py  hf.py  llama_cpp.py
backend/llm/prompts/: prompt.py
backend/rag/: rag.py
backend/rag/self_rag/: rag_graders.py  self_rag_graph.py  self_rag_nodes.py
frontend/: app.py
terraform-ecs/: main.tf  tfplan
terraform-ecs/alb/: main.tf  outputs.tf  variables.tf
terraform-ecs/ecs/: main.tf  outputs.tf  variables.tf
terraform-ecs/networking/: main.tf  outputs.tf  variables.tf
tests/: README.md  conftest.py
tests/functional/: test_rag_flow.py
tests/unit/backend/: test_api_endpoints.py  test_encryption.py  test_session_manager.py
tests/unit/backend/llm/: test_groq.py
tests/unit/backend/rag/: test_document_manager.py
tests/unit/frontend/: test_app.py
