[tool.poetry]
name = "rag-financial-reports"
version = "0.1.0"
description = "A RAG-based system for analyzing financial reports"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    {include = "backend"},
    {include = "frontend"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
llama-cpp-python = "^0.2.0"
pydantic = "^2.0.0"
PyMuPDF = "^1.23.0"
faiss-cpu = "^1.7.0"
sentence-transformers = "^2.2.0"
requests = "^2.31.0"
ctransformers = "^0.2.0"
torch = "^2.0.0"
transformers = "^4.36.0"
python-dotenv = "^1.0.0"
streamlit = "^1.30.0"
accelerate = "^1.4.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-backend = "backend.main:main"
start-frontend = "run_frontend:main"

